# remhind

./: README.md  setup.cfg
remhind/: __main__.py  events.py  monitor.py
remhind/tests/: test_events.py
