[metadata]
name = remhind
version = 0.1.1
description = A daemon to display notifications of iCalendar events
long-description = file:README.md
long-description-content-type = text/markdown
license = GPL-3
license_file = LICENSE
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: POSIX
    Topic :: Utilities
    Topic :: Office/Business :: Scheduling
author = Nicolas Évrard
author-email = nicoe@openhex.org
test-suite = remhind.tests

[options]
zip-safe = True
packages = find:
install-requires =
    aionotify
    icalendar
    python-dateutil
    pyinotify
    PyGObject
    toml
    tzlocal
    xdg
test-require =
    freezegun

[options.entry_points]
console-scripts =
    remhind = remhind.__main__:main
